--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -167,7 +167,7 @@ The key differences with \DASL\ are that knowledge is \SFive\ and the axiom of C
 
 In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show that $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is a theorem. Therefore, this system suffers from a particularly bad collision with L\"ob: Both the knowledge and belief modalities lead to inconsistency for intelligent agents capable of self-referential reasoning. 
 
-\section{\DASL}
+\subsection{\DASL}
 \label{sec:crap}
 
 \begin{table}[H]
